<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbb"
    tools:context=".searchresult">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="352dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:background="#00F70C0C"
        android:shadowColor="#00C52D2D"
        android:text="@string/s5"
        android:textAlignment="viewStart"
        android:textColor="#F00E0D0D"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="341dp"
        android:layout_height="199dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/s8"
        android:textAlignment="viewStart"
        android:textColor="#070606"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="337dp"
        android:layout_height="201dp"
        android:layout_marginStart="36dp"
        android:text="@string/s9"
        android:textColor="#141313"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />
</androidx.constraintlayout.widget.ConstraintLayout>